--- a/frontend/src/base/HomePage.css
+++ b/frontend/src/base/HomePage.css
@@ -71,13 +71,13 @@
 /* News section styling for full left alignment */
 .news-section {
     margin-left: 10; /* Aligns the section to the very left */
-    padding-left: 20px; /* Adds some spacing from the edge of the browser window */
+    padding-left: 50px; /* Adds some spacing from the edge of the browser window */
     text-align: left; /* Ensures content is aligned to the left */
 }
 
 .news-section h1 {
     color: #333; /* Dark grey color for the heading */
-    font-size: 44px; /* Heading font size */
+    font-size: 34px; /* Heading font size */
 }
 
 .news-section ul {
@@ -89,11 +89,15 @@
 .news-section li a {
     display: block; /* Makes the links block elements to occupy full available width */
     color: #0066cc; /* Link color */
-    font-size: 30px; /* Link font size */
+    font-size: 20px; /* Link font size */
     text-decoration: none; /* Removes underline from links */
     padding: 8px 0; /* Adds padding to each link for better readability */
 }
 
 .news-section li a:hover {
     text-decoration: underline; /* Adds underline on hover */
+}
+
+.news-section li a:visited {
+  color: #663399; /* Changes the color of visited links */
 }
